# pypaperutils

./: README.md  pyproject.toml
demo/: demo_tudcolors.py
src/pypaperutils/: design.py
